cmake_minimum_required(VERSION 3.16.0)

set(CMAKE_CXX_STANDARD 20)

project(advent-of-code-2021 CXX)

add_executable(day1_1 ${PROJECT_SOURCE_DIR}/src/day1/day1_1.cpp)
add_executable(day1_2 ${PROJECT_SOURCE_DIR}/src/day1/day1_2.cpp)

add_executable(day2_1 ${PROJECT_SOURCE_DIR}/src/day2/day2_1.cpp)
add_executable(day2_2 ${PROJECT_SOURCE_DIR}/src/day2/day2_2.cpp)

add_executable(day3_1 ${PROJECT_SOURCE_DIR}/src/day3/day3_1.cpp)
add_executable(day3_2 ${PROJECT_SOURCE_DIR}/src/day3/day3_2.cpp)

add_executable(day4_1 ${PROJECT_SOURCE_DIR}/src/day4/day4_1.cpp)
add_executable(day4_2 ${PROJECT_SOURCE_DIR}/src/day4/day4_2.cpp)

add_executable(day5_1 ${PROJECT_SOURCE_DIR}/src/day5/day5_1.cpp)
add_executable(day5_2 ${PROJECT_SOURCE_DIR}/src/day5/day5_2.cpp)

add_executable(day6_1 ${PROJECT_SOURCE_DIR}/src/day6/day6_1.cpp)
add_executable(day6_2 ${PROJECT_SOURCE_DIR}/src/day6/day6_2.cpp)

add_executable(day7_1 ${PROJECT_SOURCE_DIR}/src/day7/day7_1.cpp)
add_executable(day7_2 ${PROJECT_SOURCE_DIR}/src/day7/day7_2.cpp)

add_executable(day8_1 ${PROJECT_SOURCE_DIR}/src/day8/day8_1.cpp)
add_executable(day8_2 ${PROJECT_SOURCE_DIR}/src/day8/day8_2.cpp)

add_executable(day9_1 ${PROJECT_SOURCE_DIR}/src/day9/day9_1.cpp)
add_executable(day9_2 ${PROJECT_SOURCE_DIR}/src/day9/day9_2.cpp)