cmake_minimum_required(VERSION 3.16.0)

set(CMAKE_CXX_STANDARD 20)

project(advent-of-code-2021 CXX)

add_executable(day_01_1 ${PROJECT_SOURCE_DIR}/src/day_01/part_1.cpp)
add_executable(day_01_2 ${PROJECT_SOURCE_DIR}/src/day_01/part_2.cpp)

add_executable(day_02_1 ${PROJECT_SOURCE_DIR}/src/day_02/part_1.cpp)
add_executable(day_02_2 ${PROJECT_SOURCE_DIR}/src/day_02/part_2.cpp)

add_executable(day_03_1 ${PROJECT_SOURCE_DIR}/src/day_03/part_1.cpp)
add_executable(day_03_2 ${PROJECT_SOURCE_DIR}/src/day_03/part_2.cpp)

add_executable(day_04_1 ${PROJECT_SOURCE_DIR}/src/day_04/part_1.cpp)
add_executable(day_04_2 ${PROJECT_SOURCE_DIR}/src/day_04/part_2.cpp)

add_executable(day_05_1 ${PROJECT_SOURCE_DIR}/src/day_05/part_1.cpp)
add_executable(day_05_2 ${PROJECT_SOURCE_DIR}/src/day_05/part_2.cpp)

add_executable(day_06_1 ${PROJECT_SOURCE_DIR}/src/day_06/part_1.cpp)
add_executable(day_06_2 ${PROJECT_SOURCE_DIR}/src/day_06/part_2.cpp)

add_executable(day_07_1 ${PROJECT_SOURCE_DIR}/src/day_07/part_1.cpp)
add_executable(day_07_2 ${PROJECT_SOURCE_DIR}/src/day_07/part_2.cpp)

add_executable(day_08_1 ${PROJECT_SOURCE_DIR}/src/day_08/part_1.cpp)
add_executable(day_08_2 ${PROJECT_SOURCE_DIR}/src/day_08/part_2.cpp)

add_executable(day_09_1 ${PROJECT_SOURCE_DIR}/src/day_09/part_1.cpp)
add_executable(day_09_2 ${PROJECT_SOURCE_DIR}/src/day_09/part_2.cpp)

add_executable(day_10_1 ${PROJECT_SOURCE_DIR}/src/day_10/part_1.cpp)
add_executable(day_10_2 ${PROJECT_SOURCE_DIR}/src/day_10/part_2.cpp)

add_executable(day_11_1 ${PROJECT_SOURCE_DIR}/src/day_11/part_1.cpp)
add_executable(day_11_2 ${PROJECT_SOURCE_DIR}/src/day_11/part_2.cpp)

add_executable(day_12_1 ${PROJECT_SOURCE_DIR}/src/day_12/part_1.cpp)
add_executable(day_12_2 ${PROJECT_SOURCE_DIR}/src/day_12/part_2.cpp)

add_executable(day_13_1 ${PROJECT_SOURCE_DIR}/src/day_13/part_1.cpp)
add_executable(day_13_2 ${PROJECT_SOURCE_DIR}/src/day_13/part_2.cpp)